--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h2>Vapaat ajankohdat</h2>
 
     <ul>
+      <li>pe 22.3. klo 12.30</li>
       <li>Ma 25.3. klo 14-15</li>
-      <li>Pe 5.4. klo 13.30-14.30</li>
-      <li>Ma 8.4. klo 14.30-16</li>
+      <li>Ma 8.4. klo 15-16</li>
       <li>Pe 12.4. klo 12.30-14.30</li>
       <li>Ma 15.4. klo 13-15</li>
       <li>Pe 19.4. klo 12.30-14.30</li>
