--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Vapaat ajankohdat</h2>
 
     <ul>
-      <li>pe 22.3. klo 12.30</li>
+      <li>Pe 22.3. klo 12.30</li>
       <li>Ma 25.3. klo 14-15</li>
       <li>Ma 8.4. klo 15-16</li>
       <li>Pe 12.4. klo 12.30-14.30</li>
