--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h2>Vapaat ajankohdat</h2>
 
     <ul>
-      <li>Pe 26.4. klo 12.30-14.30</li>
+      <li>Pe 26.4. klo 12.00-15.00</li>
+      <li>Ma 29.4. klo 12.00-14.00 ja 15.00-16.00</li>
     </ul>
 
 </body>
