--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
   </head>
   <body>
     <h2>Vapaat ajankohdat</h2>
-
     <ul>
-      <li>Pe 26.4. klo 13.30-15.00</li>
-      <li>Ma 29.4. klo 12.00-14.00 ja 15.00-16.00</li>
+      <li>Ti 22.4. klo 13-15, A540.3 tai Teams</li>
+      <li>Ti 22.4. klo 15-17, A540.3 tai Teams</li>
+      <li>To 24.4. klo 8-9, A540.3 tai Teams</li>
+      <li>To 24.4. klo 16-17, A540.3 tai Teams</li>
+      <li>Ma 28.4. klo 9-12, Teams (huom: vain Teams-mahdollisuus)</li>
+      <li>Ma 28.4. klo 16-17, A540.3 tai Teams</li>
+      <li>Ti 29.4. klo 9-12, A310.7 tai Teams</li>
+      <li>Ti 29.4. klo 16-17, A310.7 tai Teams</li>
+      <li>Ti 6.5. klo 9-11, A540.3 tai Teams</li>
+      <li>Ke 7.5. klo 14-16, A540.3 tai Teams</li>
     </ul>
-
 </body>
 </html>
