--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <h2>Vapaat ajankohdat</h2>
     <ul>
-      <li>Ti 22.4. klo 15.20-17, A540.3 tai Teams</li>
+      <li>Ti 22.4. klo 15.40, A540.3 tai Teams</li>
       <li>To 24.4. klo 8.20 tai 8.40, A540.3 tai Teams</li>
-      <li>To 24.4. klo 16-17, A540.3 tai Teams</li>
+      <li>To 24.4. klo 16.20-17, A540.3 tai Teams</li>
       <li>Ma 28.4. klo 9-12, Teams (huom: vain Teams-mahdollisuus)</li>
       <li>Ma 28.4. klo 16-17, A540.3 tai Teams</li>
       <li>Ti 29.4. klo 9-10.00 tai 10.20, A310.7 tai Teams</li>
