--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
   <body>
     <h2>Vapaat ajankohdat</h2>
     <ul>
-      <li>To 24.4. klo 8.00, A540.3 tai Teams</li>
-      <li>To 24.4. klo 16.40, A540.3 tai Teams</li>
-      <li>Ma 28.4. klo 9-11, Teams (huom: vain Teams-mahdollisuus)</li>
       <li>Ma 28.4. klo 16.20-17, A540.3 tai Teams</li>
-      <li>Ti 29.4. klo 9.00, 9.20 tai 9.40, A310.7 tai Teams</li>
+      <li>Ti 29.4. klo 9.00-10.00, A310.7 tai Teams</li>
       <li>Ti 29.4. klo 16.40, A310.7 tai Teams</li>
       <li>Ti 6.5. klo 9-11, A540.3 tai Teams</li>
-      <li>Ke 7.5. klo 14-16, A540.3 tai Teams</li>
+      <li>Ke 7.5. klo 14.20-17, A540.3 tai Teams</li>
     </ul>
 </body>
 </html>
