Päivitetty vapaita aikoja.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <body>
     <h2>Vapaat ajankohdat</h2>
     <ul>
-      <li>Ma 28.4. klo 16.20-17, A540.3 tai Teams</li>
-      <li>Ti 29.4. klo 9.00-10.00, A310.7 tai Teams</li>
-      <li>Ti 29.4. klo 16.40, A310.7 tai Teams</li>
-      <li>Ti 6.5. klo 9-11, A540.3 tai Teams</li>
-      <li>Ke 7.5. klo 14.20-17, A540.3 tai Teams</li>
+      <li>Ma 28.4. klo 16.20-17, A540.3 tai Teams.</li>
+      <li>Ti 29.4. klo 9.00-10.00, A310.7 tai Teams.</li>
+      <li>Ti 29.4. klo 16.40, A310.7 tai Teams.</li>
+      <li>Ti 6.5. klo 9-11, A540.3 tai Teams.</li>
+      <li>Ke 7.5. klo 14.20-17, A540.3 tai Teams.</li>
+      <li>Pe 9.5. klo 11-13 Teams (Huom: Vain Teams-mahdollisuus).</li>
     </ul>
 </body>
 </html>
