Päivitetty vapaita aikoja.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h2>Vapaat ajankohdat</h2>
-    <ul>
-      <li>Pe 9.5. klo 11-13 Teams (Huom: Vain Teams-mahdollisuus).</li>
-    </ul>
+    <p>
+      Ei vapaita aikoja. Ole sähköpostitse yhteydessä ryhmänohjaajaan, jos haluat sopia tapaamisen.
+    </p>
 </body>
 </html>
